fixed color issue, added stackoverflow link, added boxes for later

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -204,11 +204,3 @@ pre {
         }
     }
 }
-
-header {
-  background-color: #ddd;
-}
-
-footer {
-  background-color: #ddd;
-}
